--- a/Chat-App-React/src/components/Chat.css
+++ b/Chat-App-React/src/components/Chat.css
@@ -15,31 +15,34 @@ body {
   input[type=text],
   input[type=password] {
     padding: 0.5rem;
-    border: 1px solid #d1d5db;
-    border-radius: 0.375rem;
+    border: 1px solid #524c6c;
+    border-radius: 0.7rem;
+    margin-bottom: 15px;
     outline: none;
     transition: border-color 0.2s, box-shadow 0.2s;
+    font-size: 15px;
   }
   
   input[type=text]:focus,
   input[type=password]:focus {
-    border-color: #3b82f6;
-    box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.3);
+    border-color: #847bac;
+    box-shadow: 0 0 0 2px #847bac;
   }
   
-  button {
-    background-color: #3b82f6;
+  .loginBtn {
+    background-color: #ff7b47;
     color: white;
     padding: 0.5rem 1rem;
-    border-radius: 0.375rem;
-    border: none;
+    border-radius: 0.7rem;
+    border: 1px solid #d96b40;
     cursor: pointer;
-    margin-left: 10px;
+    margin-top: 10px;
     transition: background-color 0.2s;
+    width: 50%;
   }
   
   button:hover {
-    background-color: #aeb2bb;
+    background-color: rgb(249, 166, 133);
   }
   
   button:focus {
@@ -73,6 +76,15 @@ body {
     width: 40vw;
     padding: 2em;
     background-color: rgb(166, 159, 205);
+  }
+
+  .loginForm{
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center; 
+    padding: 10px;
+
   }
   
   .message {
