--- a/Chat-App-React/src/components/ChatWindow.css
+++ b/Chat-App-React/src/components/ChatWindow.css
@@ -9,14 +9,17 @@
   }
   
   #chat {
+    background-color: rgb(225, 221, 245);
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
     border: 1px solid #a69fcd;
+    border-radius: 10px;
     padding: 10px;
     width: auto;
     height: 450px;
     overflow-y:auto;
+    
     /* scrollbar-color: #a69fcd #ccc7e4 ;
     scrollbar-width: thin; */
   }
@@ -36,7 +39,7 @@
   }
   
   .message-box.sent {
-    background-color: rgb(255, 123, 71);
+    background-color: rgb(245, 133, 88);
     align-self: flex-end;
     color: #fff;
   }
